<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_HTTP_Get_SmartMeter" Id="{10604ea1-d5d2-4f3e-b891-4dec4529946c}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_HTTP_Get_SmartMeter
VAR_INPUT
	bSend				: BOOL;
	timDataMomentan:REFERENCE TO ST_timData;
	nettoEffektW:REFERENCE TO REAL;
END_VAR
VAR_IN_OUT
	fbClient			: FB_IotHttpClient;
END_VAR
VAR_OUTPUT
	bBusy				: BOOL;
	bError				: BOOL;
END_VAR
VAR
	fbRequest			: FB_IotHttpRequest;
	fbJson				: FB_JsonDomParser;
	
		fbJsonDataType	: FB_JsonReadWriteDataType;
		felkod			: HRESULT;			
	pContent: PVOID;
	nState				: UDINT;
	RisingEdge			: R_TRIG;
	
	bGetContentResult	: BOOL;
	sContent			: STRING(1100);
	
	bGetJsonResult		: BOOL;
	jsonDoc				: SJsonValue;
	jsonVal				: SJsonValue;
	sResultValue		: STRING;
	
	nReqCount			: UDINT;	
	nResCount			: UDINT;
	nValidResCount		: UDINT;
	nErrCount			: UDINT;
	Vaerde: LINT;
	
	KoeptEffektW: REAL;
	SaaldEffektW: REAL;

	Effektlaegsta: REAL :=100000.0 ;
	Effekthoegsta: REAL;
	NettoEnergiAccumulerat: REAL;
	SaaldEnergiAccumulerat: REAL;
	KoeptEnergiAccumulerat: REAL;

	Funkar: BOOL;
	nisse: REAL;
	stSmartDataMomentan: SmartMeterValues;
	nisse1: REAL;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[RisingEdge(CLK:= bSend );



CASE nState OF
0:	
	IF RisingEdge.Q THEN 
		IF Funkar:= fbRequest.SendRequest(sUri:='/smartmeter/api/read', fbClient:=fbClient, eRequestType:=ETcIotHttpRequestType.HTTP_Get, 0, 0, 0) THEN				
		
		nState:= 1;
			nReqCount:= nReqCount+1;
			bBusy:= TRUE;
			bError:= FALSE;
		END_IF				
	END_IF
1:

	IF NOT fbRequest.bBusy THEN
		bError:= TRUE;
		IF NOT fbRequest.bError THEN	
			

			
//Hämta data från mätarens HTTP REST API och lägg i string
			bGetContentResult:= fbRequest.GetContent(pContent:= ADR(sContent), nContentSize:= SIZEOF(sContent), bSetNullTermination:= TRUE);
			
			
			IF fbRequest.nStatusCode >= 200 AND fbRequest.nStatusCode < 300 THEN
				bGetJsonResult:= FALSE;
			
			//Kopiera hela den importerade JSON-formaterade datasträngen och lägg i en motsvarande TwinCAT-struktur
			IF fbJsonDataType.SetSymbolFromJson(sContent, 'SmartMeterValues', SIZEOF(stSmartDataMomentan), ADR(stSmartDataMomentan), hrErrorCode=> felkod) THEN
						bError:= FALSE;
					END_IF	
			
			//räkna ut lägsta och högsta effekt
			IF felkod = 0 THEN
					
				//timDataMomentan.nettoEnergi := STRING_TO_REAL(stSmartDataMomentan.PowerDeliveredNetto);
				KoeptEffektW:= STRING_TO_REAL(stSmartDataMomentan.PowerReturned_total);
				KoeptEffektW := STRING_TO_REAL(stSmartDataMomentan.PowerDelivered_total);
				nettoEffektW:= STRING_TO_REAL(stSmartDataMomentan.PowerDeliveredNetto);
				
			END_IF	
			
				//skriv in i Struct
				timDataMomentan.nettoEnergi:= timDataMomentan.nettoEnergi+ (nettoEffektW/144000);    //144 sampel per timme
				timDataMomentan.saaldEnergi:= timDataMomentan.saaldEnergi+ (SaaldEffektW/144000);   //144 sampel per timme
				timDataMomentan.KoeptEnergi:= timDataMomentan.KoeptEnergi+(KoeptEffektW/144000);   //144 sampel per timme
				
				IF timDataMomentan.laegstaNettoEffekt> nettoEffektW THEN 	
					timDataMomentan.laegstaNettoEffekt:=nettoEffektW;
				ELSIF timDataMomentan.toppNettoEffekt< nettoEffektW THEN 	
					timDataMomentan.toppNettoEffekt:=nettoEffektW;			
				END_IF
			
				nResCount:= nResCount+1;			
			END_IF
		END_IF
			nisse:=nisse+1;
		nState:= 2;
		bBusy:= FALSE;
		IF bError THEN
			nErrCount:= nErrCount+1;
		END_IF
	END_IF  	

2:   //Räkna ut pengar
timDataMomentan.saaltSolceller:= timDataMomentan.saaltSolceller+(SaaldEffektW/144000*(timDataMomentan.timPris+GVL.NaetNyttaKWh+GVL.SkatteAvdragKWh));  //Sålt i kr

timDataMomentan.Koept:= timDataMomentan.Koept + KoeptEffektW/144000*(timDataMomentan.timPris+GVL.ElOeverfoeringsAvgiftEonKWh+GVL.EnergiskattKWh+GVL.MomsKWh+GVL.PaaslagMinusRabattKWh);



nState:= 0;

	
END_CASE
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>